# debate_timer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resorce.qrc
.cache/clangd/index/: main.cpp.D01EA40B2E9273F1.idx  mainwindow.cpp.D1B5443C94349CAF.idx  mainwindow.h.292CAB6CC70EA3EF.idx
src/: Debate Timer.cpp  Debate Timer.h  Debate Timer.ui  main.cpp
